<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_layout"
    android:visibility="invisible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--若没有登录，可见-->
    <!--ImageView
        android:id="@+id/img_welcom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"

        android:src="@drawable/welcome"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/language_select_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/language_select_tag"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/start_vertical_margin"
            android:layout_marginLeft="@dimen/start_horizontal_margin"
            android:background="@color/button_color_green"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/start_vertical_margin"
            android:layout_marginRight="@dimen/start_horizontal_margin"
            android:background="@color/white"
            android:text="@string/register"
            android:visibility="visible" />

    </RelativeLayout>


</FrameLayout>
